# nimbus

./: .gitignore
academy/: CLAUDE.md  README.md  SUMMARY.md  benchmark_checkpoints.py  benchmark_trials.yaml  config.yaml  infer.py  optimize.py  requirements.txt  train.py
academy/datasets/: build_dataset.py  build_dataset_16647156.py  build_dataset_swimnseg.py  datasets.md
academy/datasets/configs/: kontas2017.yaml  merged_cloud.yaml  swimseg.yaml  swinseg.yaml
academy/tests/: test_benchmark_checkpoints.py  test_commons.py  test_evaluator.py  test_int8_exclusion.py  test_onnx_decode.py  test_optimize.py  test_optimizers.py  test_profiler.py  test_run_benchmark.py  test_stages.py  test_trials.py  test_utils.py
academy/utils/: commons.py  config.py  onnx_utils.py  paths.py  plotter.py  session.py  stages.py
academy/utils/benchmark/: benchmark.py  evaluator.py  onnx_decode.py  profiler.py  trials.py
academy/utils/datasets/: __init__.py  base.py  binary_mask_builder.py  config.py  kontas_builder.py  merge.py
academy/utils/models/: __init__.py  base.py  rfdetr_adapter.py  yolo_adapter.py
academy/utils/optimizers/: fp16_converter.py  int8_converter.py  metadata.py  onnx_simplifier.py  provenance.py  pruner.py
academy/utils/reports/: html_report.py  markdown_report.py  plots.py
observatory/: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  vcpkg.json
observatory/app/: CMakeLists.txt
observatory/app/src/: benchmark.cpp  main.cpp
observatory/camera/: CMakeLists.txt
observatory/camera/include/observatory/camera/: FileCamera.hpp  ICamera.hpp
observatory/camera/src/: FileCamera.cpp  placeholder.cpp
observatory/camera/tests/: CMakeLists.txt  CameraModule_test.cpp  FileCamera_test.cpp  ICamera_test.cpp
observatory/cmake/: CompilerWarnings.cmake  CopyOpenCVDlls.cmake  CopyTensorRtRtxDlls.cmake  FetchGoogleTest.cmake  FetchOnnxRuntime.cmake
observatory/communication/: CMakeLists.txt
observatory/communication/src/: placeholder.cpp
observatory/communication/tests/: CMakeLists.txt  CommunicationModule_test.cpp
observatory/configuration/: CMakeLists.txt
observatory/configuration/include/observatory/configuration/: Config.hpp  ConfigLoader.hpp  PipelineFactory.hpp
observatory/configuration/src/: ConfigLoader.cpp  PipelineFactory.cpp  placeholder.cpp
observatory/configuration/tests/: CMakeLists.txt  ConfigLoader_test.cpp  ConfigurationModule_test.cpp  PipelineFactory_test.cpp
observatory/inference/: CMakeLists.txt
observatory/inference/include/observatory/inference/: IInferenceBackend.hpp  IInferenceModel.hpp  ISegmenter.hpp  ModelMetadata.hpp  OnnxRuntimeBackend.hpp  OpenCVBackend.hpp  Tensor.hpp  YoloModel.hpp
observatory/inference/src/: OnnxRuntimeBackend.cpp  OpenCVBackend.cpp  Tensor.cpp  YoloModel.cpp
observatory/inference/tests/: CMakeLists.txt  IInferenceBackend_test.cpp  IInferenceModel_test.cpp  ISegmenter_test.cpp  OnnxRuntimeBackend_test.cpp  OpenCVBackend_test.cpp  Tensor_test.cpp  YoloModel_test.cpp
observatory/logging/: CMakeLists.txt
observatory/logging/src/: placeholder.cpp
observatory/logging/tests/: CMakeLists.txt  LoggingModule_test.cpp
observatory/postprocessing/: CMakeLists.txt
observatory/postprocessing/include/observatory/postprocessing/: Detection.hpp  IPostprocessor.hpp  YoloSegPostprocessor.hpp
observatory/postprocessing/src/: YoloSegPostprocessor.cpp  placeholder.cpp
observatory/postprocessing/tests/: CMakeLists.txt  IPostprocessor_test.cpp
observatory/preprocessing/: CMakeLists.txt
observatory/preprocessing/include/observatory/preprocessing/: IPreprocessor.hpp  YoloSegPreprocessor.hpp
observatory/preprocessing/src/: YoloSegPreprocessor.cpp  placeholder.cpp
observatory/preprocessing/tests/: CMakeLists.txt  IPreprocessor_test.cpp  YoloSegPreprocessor_test.cpp
observatory/storage/: CMakeLists.txt
observatory/storage/src/: placeholder.cpp
observatory/storage/tests/: CMakeLists.txt  StorageModule_test.cpp
observatory/telemetry/: CMakeLists.txt
observatory/telemetry/src/: placeholder.cpp
observatory/telemetry/tests/: CMakeLists.txt  TelemetryModule_test.cpp
observatory/tracking/: CMakeLists.txt
observatory/tracking/include/observatory/tracking/: ITracker.hpp
observatory/tracking/src/: placeholder.cpp
observatory/tracking/tests/: CMakeLists.txt  ITracker_test.cpp
web/: CLAUDE.md  README.md  config.yaml  requirements.txt
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: Ambient.svelte  App.svelte  app.css
web/frontend/src/assets/: land-rings.json
web/frontend/src/lib/: ambient.js  api.js  astro.js  events.js  format.js
web/frontend/src/widgets/: AllSkyImage.svelte  Astronomy.svelte  CloudClasses.svelte  CurrentConditions.svelte  ForecastChart.svelte  HistoryChart.svelte  LoraLinkChart.svelte  LoraNodes.svelte  OpenMeteoForecast.svelte  Orrery.svelte  RainMap.svelte  RawObservations.svelte  SystemStatus.svelte  Timelapse.svelte  Widget.svelte  registry.js
web/scripts/: build-and-restart.sh  restart.sh  stop.sh
web/server/: config.py  db.py  main.py  models.py
web/server/api/: __init__.py  dashboard.py  deps.py  health.py  nodes.py  observations.py  providers.py  stations.py
web/server/providers/: astronomy.py  base.py  open_meteo.py  rain_viewer.py  registry.py
web/tests/: test_api.py  test_config.py  test_nodes.py  test_providers.py
